Position fixed pour que la boite soit toujours visibile

--- a/css/edit.css
+++ b/css/edit.css
@@ -1,6 +1,6 @@
 div.edit_box {
-/*  position    : fixed !important;*/
-  position    : absolute !important;
+  position    : fixed !important;
+/*  position    : absolute !important;*/
   top         : 9em;
   left        : 20em;
   background-color: #DDD;
